@@ -6,6 +6,9 @@
 	* src/data.cpp: Fix for PR#2889763 from Fabian -- make
 	sure to check chain numbers as well -- or bond between chains!
 
+	* src/typer.cpp: Fix for PR#2889708 -- another patch from Fabian
+	to improve performance of SelectRootAtoms.
+
 2010-03-01  Tim Vandermeersch
 
         * src/stereo/perception.cpp: Add some more safety logic. (Fixes #2897750)
